# chainrules-rs

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
crates/chainrules/: Cargo.toml  README.md
crates/chainrules-core/: Cargo.toml  README.md
crates/chainrules-core/src/: lib.rs
crates/chainrules-core/src/tests/: mod.rs
crates/chainrules-core/tests/: core_tests.rs
crates/chainrules/src/: binary.rs  binary_special.rs  lib.rs  power.rs  real_ops.rs  scalar_ad.rs
crates/chainrules/src/scalar_ad/: complex.rs  mod.rs  real.rs
crates/chainrules/src/tests/: behavior.rs  mod.rs  organization.rs
crates/chainrules/src/unary/: basic.rs  complex_parts.rs  exp_log.rs  exp_log_smooth.rs  hyperbolic.rs  hyperbolic_extra.rs  mod.rs  nonsmooth.rs  roots.rs  smooth.rs  trig.rs  trig_extra.rs  trig_smooth.rs
crates/chainrules/tests/: common.rs  complex_helper_tests.rs  julia_compat_trig_tests.rs  nonsmooth_scalar_tests.rs  oracle_scalar_rules.rs  reexport_tests.rs  scalarops_tests.rs  smooth_basis_tests.rs
docs/plans/: 2026-03-21-chainrules-shared-scalar-basis-design.md  2026-03-21-complex-jvp-alignment.md
docs/superpowers/plans/: 2026-04-03-chainrules-v2.md  2026-04-03-computegraph-rs.md  2026-04-11-adcontext-trait.md
docs/superpowers/specs/: 2026-04-03-chainrules-v2-design.md  2026-04-03-computegraph-rs-design.md  2026-04-03-tidu-v2-design.md
src/: ad_key.rs  lib.rs  primitive_op.rs
tests/: trait_tests.rs
