[workspace]
resolver = "2"
members = ["crates/chainrules-core", "crates/chainrules"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Hiroshi Shinaoka <h.shinaoka@gmail.com>", "GiggleLiu <cacate0129@gmail.com>"]
publish = false

[workspace.dependencies]
num-complex = "0.4"
num-traits = "0.2"
serde_json = "1"
thiserror = "2"
