[package]
name = "chainrules"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Engine-independent scalar automatic-differentiation rules."

[dependencies]
chainrules-core = { path = "../chainrules-core" }
num-complex.workspace = true
num-traits.workspace = true

[dev-dependencies]
serde_json.workspace = true
